tests/baselines/reference/typesOnlyExternalModuleStillHasInstance.errors.txt
tests/cases/conformance/externalModules/foo_1.ts(5,5): error TS2741: Property 'M2' is missing in type 'typeof import("tests/cases/conformance/externalModules/foo_0")' but required in type '{ M2: Object; }'.


==== tests/cases/conformance/externalModules/foo_1.ts (1 errors) ====
    import foo0 = require('./foo_0');
    // Per 11.2.3, foo_0 should still be "instantiated", albeit with no members
    
    var x: typeof foo0 = {};
    var y: {M2: Object} = foo0;
        ~
!!! error TS2741: Property 'M2' is missing in type 'typeof import("tests/cases/conformance/externalModules/foo_0")' but required in type '{ M2: Object; }'.
!!! related TS2728 tests/cases/conformance/externalModules/foo_1.ts:5:9: 'M2' is declared here.
    
==== tests/cases/conformance/externalModules/foo_0.ts (0 errors) ====
    export interface Person {
    	name: string;
    	age: number;
    }
    
    export module M2 {
    	export interface I2 {
    		x: Person;
    	}
    }
    